--- a/src/main/resources/templates/pages/profile.html
+++ b/src/main/resources/templates/pages/profile.html
@@ -24,7 +24,6 @@
                         <div class="dropdown-content">
                             <a href="#profilePopup">Профіль</a>
                             <a href="#passwordPopup">Пароль</a>
-                            <a href="/profile/psw_change">Пароль</a>
                         </div>
                     </div>
                     <div class="dropdown" sec:authorize="hasRole('ROLE_ADMIN')">
@@ -123,9 +122,8 @@
                 </div>
                 <div class="row_block" style="justify-content: space-between">
                     <div>
-                        Стать:
-                        <input id="m" type="radio" name="gender" value="male" required> М
-                        <input id="f" type="radio" name="gender" value="female" required> Ж
+                        <input id="m" type="radio" name="gender" value="male" required> Чол
+                        <input id="f" type="radio" name="gender" value="female" required> Жін
                     </div>
                     <div>
                         Обрати зображення:
