--- a/src/main/resources/templates/pages/users.html
+++ b/src/main/resources/templates/pages/users.html
@@ -57,11 +57,10 @@
                 </div>
                 <table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
                     <thead>
-                    <th>Логин</th>
-                    <th>Почта</th>
-                    <th>Имя</th>
-                    <th>Университет</th>
-                    <th>Город</th>
+                    <th>Пошта</th>
+                    <th>ПІБ</th>
+                    <th>ВНЗ</th>
+                    <th>Місто</th>
                     </thead>
                     <tbody id="users">
 
