--- a/src/main/resources/templates/pages/home.html
+++ b/src/main/resources/templates/pages/home.html
@@ -66,7 +66,7 @@
                         <ol>
                             <li>
                                 Перейдіть до вкладки
-                                <a href="/users">Користувачі</a>
+                                <a href="/users">Учасники</a>
                             </li>
                             <li>
                                 Оберіть необхідних учасників
