front bug fixes

--- a/src/main/resources/templates/pages/event.html
+++ b/src/main/resources/templates/pages/event.html
@@ -62,8 +62,7 @@
                         <h4>Учасники</h4>
                         <table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
                             <thead>
-                            <th>Логін</th>
-                            <th>Пароль</th>
+                            <th>Пошта</th>
                             <th>Ім'я</th>
                             <th>Університет</th>
                             <th>Місто</th>
